appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "Rooms"
- assertVisible: "Create and manage your meeting rooms."
# Open the Create Modal
- tapOn: "Create Room"
# Wait for Modal to fully load
- assertVisible: "Create a Room"
# Input Room Name
- tapOn: "e.g. Marketing Weekly Sync"
- inputText: "Maestro Auto Room"
# Hide keyboard so the submit button is not covered
- hideKeyboard
# Submit the form (since the background button is inactive, this will target the modal's submit button)
- tapOn: "Create Room"
# Verify Success
- assertVisible: "Maestro Auto Room"
