appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "More"
- tapOn: "Recordings"
- assertVisible: "Recordings"
# Tap Trash icon on the first recording card
- tapOn: { point: "92%,46%" }
- tapOn: "Delete"
