appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "Rooms"
- assertVisible: "Create and manage your meeting rooms."
# Scroll down until the Maestro Auto Room is fully visible on the screen
- scrollUntilVisible:
    element: "Maestro Auto Room"
    direction: DOWN
# Tap the trash button directly to the right of "Maestro Auto Room"
- tapOn: { rightOf: "Maestro Auto Room" }
# Confirm deletion in the alert popup
- tapOn: "Delete"
