appId: com.konn3ct.mobile
---
- launchApp:
    clearState: true
- evalScript: "java.lang.Thread.sleep(5000)"
- tapOn:
    text: "SKIP"
    optional: true
- tapOn:
    text: "Skip"
    optional: true
- tapOn:
    text: "GET STARTED"
    optional: true
- tapOn:
    text: "Get Started"
    optional: true
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    id: "welcome-signin-button"
    optional: true
- tapOn:
    text: "Sign In"
    optional: true
- tapOn:
    text: "Sign in"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn:
    id: "mda-input"
    optional: true
- tapOn:
    text: "Enter your MDA"
    optional: true
- inputText:
    text: "konnectsandbox"
    optional: true
- pressKey: Enter
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- tapOn:
    id: "email-input"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: "odejinmisa@newwavesecosystem.com"
- tapOn:
    id: "password-input"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- inputText: "827xazLF6TBfD7N!"
- pressKey: Enter
- hideKeyboard
- evalScript: "java.lang.Thread.sleep(1000)"
- tapOn:
    id: "login-button"
    optional: true
- tapOn:
    text: "Login"
    optional: true
- tapOn:
    point: "50%,64%"
    optional: true
- assertVisible:
    text: 
    optional: true
    id: "host-meeting-btn"
    optional: true
- tapOn:
    text: "Profile"
    optional: true
- tapOn:
    point: "70%,95%"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- assertVisible:
    text: 
    optional: true
    id: "edit-profile-btn"
    optional: true
- evalScript: "java.lang.Thread.sleep(1500)"
- tapOn:
    text: "More"
    optional: true
- tapOn:
    point: "90%,90%"
    optional: true
- tapOn:
    point: "90%,92%"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- scrollUntilVisible:
    element: "Log Out"
    direction: DOWN
    optional: true
- tapOn:
    text: "Log Out"
    optional: true
- tapOn:
    text: "Sign Out"
    optional: true
- evalScript: "java.lang.Thread.sleep(1500)"
- tapOn:
    text: "Log Out"
    optional: true
- tapOn:
    text: "Sign Out"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- assertVisible:
    text: 
    optional: true
    id: "welcome-signin-button"
    optional: true