appId: com.konn3ct.mobile
---
- launchApp:
    clearState: true
- evalScript: "java.lang.Thread.sleep(5000)"
- tapOn:
    text: "SKIP"
    optional: true
- tapOn:
    text: "Skip"
    optional: true
- tapOn:
    text: "GET STARTED"
    optional: true
- tapOn:
    text: "Get Started"
    optional: true
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    id: "welcome-signin-button"
    optional: true
- tapOn:
    text: "Sign In"
    optional: true
- tapOn:
    text: "Sign in"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn:
    id: "mda-input"
    optional: true
- tapOn:
    text: "Enter your MDA"
    optional: true
- inputText:
    text: "konnectsandbox"
    optional: true
- pressKey: Enter
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- tapOn:
    id: "email-input"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: "odejinmisa@newwavesecosystem.com"
- tapOn:
    id: "password-input"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- inputText: "827xazLF6TBfD7N!"
- pressKey: Enter
- hideKeyboard
- evalScript: "java.lang.Thread.sleep(1000)"
- tapOn:
    id: "login-button"
    optional: true
- tapOn:
    text: "Login"
    optional: true
- tapOn:
    point: "50%,64%"
    optional: true
- evalScript: "java.lang.Thread.sleep(8000)"
- tapOn:
    text: "Events"
    optional: true
- tapOn:
    point: "10%,90%"
    optional: true
- tapOn:
    point: "10%,92%"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- tapOn:
    id: "create-event-btn"
    optional: true
- tapOn:
    text: "Create Event"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- assertVisible:
    text: 
    optional: true
    text: "e.g. Annual Tech Summit"
    optional: true
- tapOn:
    text: "e.g. Annual Tech Summit"
    optional: true
- inputText: "Maestro Tech Summit"
- tapOn:
    text: "Your Name or Company"
    optional: true
- inputText: "Maestro QA Team"
- hideKeyboard
- tapOn:
    text: "Choose a room"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- tapOn:
    text: "/000 Maestro.*/"
    optional: true
- tapOn:
    text: "Start Date"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "Start Time"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "End Date"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "End Time"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "Describe what your event is about..."
    optional: true
- inputText: "This is a pre-registered event compiled for remote mobile performance tests."
- hideKeyboard
- scrollUntilVisible:
    element: "submit-event-btn"
    direction: DOWN
    optional: true
- tapOn:
    id: "submit-event-btn"
    optional: true
- tapOn:
    text: "Create"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"