appId: com.konn3ct.mobile
---
- launchApp:
    clearState: true
- evalScript: "java.lang.Thread.sleep(5000)"
- tapOn:
    text: "SKIP"
    optional: true
- tapOn:
    text: "Skip"
    optional: true
- tapOn:
    text: "GET STARTED"
    optional: true
- tapOn:
    text: "Get Started"
    optional: true
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    id: "welcome-signin-button"
    optional: true
- tapOn:
    text: "Sign In"
    optional: true
- tapOn:
    text: "Sign in"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn:
    id: "mda-input"
    optional: true
- tapOn:
    text: "Enter your MDA"
    optional: true
- inputText:
    text: "konnectsandbox"
    optional: true
- pressKey: Enter
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- evalScript: "java.lang.Thread.sleep(3000)"
- tapOn:
    id: "email-input"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: "odejinmisa@newwavesecosystem.com"
- tapOn:
    id: "password-input"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- inputText: "827xazLF6TBfD7N!"
- pressKey: Enter
- hideKeyboard
- evalScript: "java.lang.Thread.sleep(1000)"
- tapOn:
    id: "login-button"
    optional: true
- tapOn:
    text: "Login"
    optional: true
- tapOn:
    point: "50%,64%"
    optional: true
- evalScript: "java.lang.Thread.sleep(5000)"
- tapOn:
    id: "create-room-btn"
    optional: true
- tapOn:
    text: "Rooms"
    optional: true
- tapOn:
    point: "30%,90%"
    optional: true
- tapOn:
    point: "30%,92%"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn:
    id: "create-room-btn"
    optional: true
- tapOn:
    text: "Create Room"
    optional: true
# Wait for Modal to fully load
- assertVisible:
    text: 
    optional: true
    text: "e.g. Marketing Weekly Sync"
    optional: true
# Input Room Name
- tapOn:
    text: "e.g. Marketing Weekly Sync"
    optional: true
- inputText: "000 Maestro Room"
# Hide keyboard so the submit button is not covered
- hideKeyboard
# Submit the form
- tapOn:
    text: "Create Room"
    optional: true
# Verify Success
- assertVisible:
    text: "000 Maestro Room"
    optional: true