appId: com.konn3ct.mobile
---
- launchApp:
    clearState: true
- evalScript: "java.lang.Thread.sleep(5000)"
- tapOn:
    text: "SKIP"
    optional: true
- tapOn:
    text: "Skip"
    optional: true
- tapOn:
    text: "GET STARTED"
    optional: true
- tapOn:
    text: "Get Started"
    optional: true
- tapOn:
    text: "Next"
    optional: true
- tapOn:
    id: "welcome-signin-button"
    optional: true
- tapOn:
    text: "Sign In"
    optional: true
- tapOn:
    text: "Sign in"
    optional: true
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn:
    id: "mda-input"
    optional: true
- inputText:
    text: "konnectsandbox"
    optional: true
- tapOn:
    id: "email-input"
    optional: true
- tapOn:
    text: "Email"
    optional: true
- inputText: "odejinmisa@newwavesecosystem.com"
- tapOn:
    id: "password-input"
    optional: true
- tapOn:
    text: "Password"
    optional: true
- inputText: "827xazLF6TBfD7N!"
- pressKey: Enter
- hideKeyboard
- evalScript: "java.lang.Thread.sleep(1000)"
- tapOn:
    id: "login-button"
    optional: true
- tapOn:
    text: "Login"
    optional: true
- tapOn:
    point: "50%,64%"
    optional: true
- evalScript: "java.lang.Thread.sleep(8000)"
- tapOn: "Join"
- tapOn: "e.g. general-meeting"
- inputText: "1govtest"
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn: "Mic On"
- assertVisible: "Join Room"
- tapOn: "Join Room"
# Wait for Jitsi meeting view to load
- evalScript: "java.lang.Thread.sleep(20000)"
