appId: com.konn3ct.mobile
---
- launchApp:
    clearState: true
    permissions:
      camera: deny
      microphone: deny
      notifications: deny
- tapOn:
    text: "Enter your MDA"
    optional: true
- inputText:
    text: "konnectsandbox"
    optional: true
- tapOn: "Email"
- inputText: "odejinmisa@newwavesecosystem.com"
- tapOn:
    text: "Password"
    optional: true
- tapOn:
    text: "Enter your password"
    optional: true
- inputText: "827xazLF6TBfD7N!"
- pressKey: Enter
- hideKeyboard
- evalScript: "java.lang.Thread.sleep(1000)"
- tapOn:
    text: "Login"
    optional: true
- tapOn:
    point: "50%,64%"
- evalScript: "java.lang.Thread.sleep(8000)"
- tapOn: "Join"
- tapOn: "e.g. general-meeting"
- inputText: "1govtest"
- evalScript: "java.lang.Thread.sleep(2000)"
- tapOn: "Mic On"
- evalScript: "java.lang.Thread.sleep(2000)"
- setPermissions:
    permissions:
      camera: allow
      microphone: allow
      notifications: allow
- tapOn: "Mic On"
- evalScript: "java.lang.Thread.sleep(1000)"
- assertVisible:
    text: "Join Room"
    optional: true