appId: com.konn3ct.mobile
---
- launchApp
- tapOn: "Demo@email.com"
- inputText: "flowboyzamy@gmail.com"
- tapOn: "Enter your password"
- inputText: "Samedo3333@"
- tapOn: "Login"
- tapOn: "More"
- tapOn: "Recordings"
- assertVisible: "Recordings"
- tapOn: "Search recordings..."
- inputText: "Maestro Test Recording"
# Tap Share button on the recording card
- tapOn: { point: "78%,46%" }
- assertVisible: "Link Copied"
